<resources>
    <string name="app_name">MiBand2</string>
    <string name="btnCro">Enviar Cronómetro</string>
    <string name="botonEnviar">Enviar Mensagem</string>
    <string name="checkBox">Enviar Texto</string>

    <string name="btnLlamar">Chamar</string>

    <string name="btnDescon">Desconectar MiBand</string>
    <string name="btnBoton">Aativar botao MiBand</string>
    <string name="btnConectar">Conectar na MiBand</string>
    <string name="txtTime">Remaining time: </string>
    <string name="txt30Secs">30 Seconds</string>
    <string name="txt60Secs">60 Seconds</string>
    <string name="txt90Secs">90 Seconds</string>
    <string name="txt120Secs">120 Seconds</string>
    <string name="txt180Secs">180 Seconds</string>

</resources>
