<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp"
    tools:context="com.example.marmou.miband2.MainActivity">

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTime"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/grp_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTime"
        android:layout_alignStart="@+id/txtTime"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/seconds30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txt30Secs" />

        <RadioButton
            android:id="@+id/seconds45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt60Secs" />

        <RadioButton
            android:id="@+id/seconds60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt90Secs" />

        <RadioButton
            android:id="@+id/seconds120"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt120Secs" />

        <RadioButton
            android:id="@+id/seconds180"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt180Secs" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="MAC: "
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txMac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="D7:7C:97:EC:C7:64" />

</RelativeLayout>